# scylladb_cassandra_history_plugin

./: CMakeLists.txt  README.md  cassandra_client.cpp  cassandra_client.h  cassandra_guard.h  cassandra_history_plugin.cpp
ThreadPool/: ThreadPool.h
include/eosio/cassandra_history_plugin/: account_action_trace_shard_object.hpp  cassandra_history_plugin.hpp  cassandra_types.hpp  reversible_block_traces_object.hpp
